<resources>
    <string name="app_name" translatable="false">Zaram T</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_privacy_and_security">Privacy and security</string>
    <string name="menu_signout">Sign out</string>
    <string name="welcome">"Welcome, "</string>
    <string name="menu_my_profile">My profile</string>
    <string name="do_it" translatable="false">Do it !</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="signup_text">Not a member? click here to sign-up</string>
    <string name="wrong_credentials">Wrong email or password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="signup_details_error">Error: Password length must be 6 to 12 characters, display name         must contain only letters and digits, email address must be valid.</string>
    <string name="signup_failed">Could not Sign-up, Please try again later</string>
    <string name="sign_out_title">Sign out?</string>
    <string name="sign_out_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_title">delete?</string>
    <string name="delete_message">Are you sure you want to delete the post?</string>
    <string name="vote">vote</string>
    <string name="home">Home</string>
    <string name="search_question">Search question</string>
    <string name="add">Add</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="choose_category">All categories...</string>
    <string name="choose_question">What would you like to ask?</string>
    <string name="choose_answers">Choose your best possibility answers...</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="language_list">
        <item>@string/english</item>
        <item>@string/hebrew</item>
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>he</item>
    </string-array>

    <string-array name="category_list">
        <item>@string/cinema</item>
        <item>@string/events</item>
        <item>@string/munch</item>
        <item>@string/doing_home</item>
        <item>@string/doing_out</item>
        <item>@string/tv</item>
        <item>@string/relationships</item>
        <item>@string/studies</item>
    </string-array>

    <string name="munch">Munch</string>
    <string name="relationships">Relationships</string>
    <string name="events">Events</string>
    <string name="cinema">Cinema</string>
    <string name="doing_home">Doing home</string>
    <string name="doing_out">Doing out</string>
    <string name="studies">Studies</string>
    <string name="tv">TV</string>
    <string name="doing_alone">Doing alone</string>
    <string name="shopping">Shopping</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="language">Language</string>
    <string name="hebrew">עברית</string>
    <string name="english">English</string>
    <string name="choose_language">Choose language</string>
    <string name="language_changed">Language was changed!</string>
    <string name="max_answers_message">You can\'t choose over 4 answers</string>
    <string name="upload">Upload</string>
    <string name="valid_answers_message">You must check 4 answers to post question!</string>
    <string name="post_question_fail">Posting question failed!</string>
    <string name="channel_name">channel name</string>
    <string name="posting_title">Posting...</string>
    <string name="posting_message">This may take a few seconds.</string>
    <string name="delete">Delete</string>
    <string name="voted">Voted:</string>
    <string name="choose_timer">How long is the post open?</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="hours_list">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>@string/tv</item>
        <item>@string/studies</item>
    </string-array>
    <string name="not_enough_time_message">Please fill in the message time!</string>
    <string name="no_votes">There are no votes</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="seconds">seconds</string>
    <string name="closed">closed</string>
    <string name="save">Save</string>
    <string name="nickname">Nickname</string>
    <string name="skip">Skip</string>
    <string name="nickname_validation">Nickname can\'t be blank!</string>
    <string name="votes">Votes</string>
    <string name="posts">"Posts "</string>
    <string name="edit">Edit</string>
    <string name="upload_post">Upload post</string>
    <string name="voters">Voters</string>
    <string name="top_question">Questions - Top 5</string>
    <string name="top_users_in_posts">Top Users - in posts</string>
    <string name="top_users_in_votes">Top Users - in votes</string>
    <string name="search_user">Search user</string>
    <string name="search">Search</string>
    <string name="description">Do you have a dilemma? let\'s share and flow!</string>
</resources>