<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="200"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="200"
        android:title="@string/statistics"
        android:icon="@drawable/ic_statistics"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="200"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"/>
</menu>