<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <!--        <item-->
                <!--            android:id="@+id/nav_home"-->
                <!--            android:icon="@drawable/ic_home"-->
                <!--            android:title="@string/menu_home" />-->

                <!--        <item-->
                <!--            android:id="@+id/nav_my_profile"-->
                <!--            android:icon="@drawable/ic_profile"-->
                <!--            android:title="@string/menu_my_profile"/>-->

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings"/>

                <item
                    android:id="@+id/nav_privacy_and_security"
                    android:icon="@drawable/ic_privacy_and_security"
                    android:title="@string/menu_privacy_and_security"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_signout"
        android:title="@string/menu_signout" />

</menu>